# AIMatrices

./: .gitignore  Cargo.toml  LICENSE  README.md  README_cn.md
components/: README.md
components/flux-handler-component/: Cargo.toml  README.md
components/flux-handler-component/src/: lib.rs
components/http-flux-handler-component/: Cargo.toml
components/http-general-js-handler-component/: 1.txt  Cargo.toml  README.md
components/http-general-js-handler-component/src/: lib.rs
components/http-llm-local-handler-component/: Cargo.toml  README.md
components/http-llm-local-handler-component/src/: lib.rs
components/http-local-whisper-handler-component/: Cargo.toml  README.md
components/http-local-whisper-handler-component/src/: lib.rs
components/http-markdown-handler-component/: Cargo.toml  README.md
components/http-markdown-handler-component/src/: lib.rs
components/http-ollama-handler-component/: Cargo.toml  README.md
components/http-ollama-handler-component/src/: lib.rs
components/http-static-file-handler-component/: Cargo.toml  README.md
components/http-static-file-handler-component/src/: lib.rs
components/llm-handler-component/: Cargo.toml  README.md
components/llm-handler-component/src/: lib.rs
components/llm-local-handler-component/: Cargo.toml  (+1 more)
components/static-file-handler-component/: Cargo.toml  README.md
components/static-file-handler-component/src/: lib.rs
crates/candle/: Cargo.toml
crates/candle/src/: lib.rs
crates/candle/src/examples/: mod.rs  token_output_stream.rs
crates/candle/src/transformers/: mod.rs  object_detection.rs  quantized_nn.rs  quantized_var_builder.rs  utils.rs
crates/candle/src/transformers/generation/: mod.rs
crates/candle/src/transformers/models/: mod.rs  with_tracing.rs
crates/infer/llama-infer-executor/: Cargo.toml  README.md
crates/infer/llama-infer-executor/llama-cpp-2/: Cargo.toml
crates/infer/llama-infer-executor/llama-cpp-2-v1/: Cargo.toml
crates/infer/llama-infer-executor/llama-cpp-2-v1/src/: context.rs  llama_backend.rs  llama_batch.rs  model.rs
crates/infer/llama-infer-executor/llama-cpp-2-v1/sys/: Cargo.toml  build.rs
crates/infer/llama-infer-executor/llama-cpp-2-v2/: Cargo.toml
crates/infer/llama-infer-executor/llama-cpp-2-v2/sys/: Cargo.toml  build.rs
crates/infer/llama-infer-executor/llama-cpp-2/sys/: Cargo.toml  build.rs
crates/infer/llama-infer-executor/src/: context.rs  infer.rs  lib.rs  model.rs  model_metadata.rs  sampler.rs  token.rs
crates/infer/ncnn-infer-executor/: Cargo.toml  README.md  build.rs
crates/infer/ncnn-infer-executor/src/: bindings.rs  lib.rs
crates/infer/sd-infer-executor/: Cargo.toml  Params.md  README.md
crates/infer/sd-infer-executor/src/: context.rs  error.rs  image.rs  lib.rs
crates/infer/sd-infer-executor/src/clib/: mod.rs
crates/infer/sd-infer-executor/src/config/: context_config.rs  mod.rs  txt2img_config.rs
crates/infer/sd-infer-executor/src/preset/: mod.rs  modifier.rs  preset_builder.rs
crates/infer/sd-infer-executor/sys/: Cargo.toml  build.rs  wrapper.h
crates/infer/sd-infer-executor/sys/src/: bindings.rs
crates/infer/whisper-infer-executor/whisper-rs/: Cargo.toml
crates/infer/whisper-infer-executor/whisper-rs/src/: lib.rs  standalone.rs
crates/qjsruntime/llrt/llrt_json/: Cargo.toml
crates/qjsruntime/llrt/llrt_json/src/: escape.rs  lib.rs  parse.rs  stringify.rs
crates/qjsruntime/llrt_modules/llrt_module_buffer/: Cargo.toml
crates/qjsruntime/llrt_modules/llrt_module_buffer/src/: buffer.rs
crates/qjsruntime/llrt_modules/llrt_module_crypto/: Cargo.toml
crates/qjsruntime/llrt_modules/llrt_module_crypto/src/: lib.rs
crates/qjsruntime/llrt_modules/llrt_module_fs/: Cargo.toml
crates/qjsruntime/llrt_modules/llrt_module_fs/src/: access.rs  lib.rs  mkdir.rs  read_dir.rs  read_file.rs  rm.rs  stats.rs  write_file.rs
crates/qjsruntime/llrt_modules/llrt_module_timers/: Cargo.toml
crates/qjsruntime/llrt_modules/llrt_module_timers/src/: lib.rs
crates/qjsruntime/qjsruntime-core/: Cargo.toml
crates/qjsruntime/qjsruntime-core/src/: lib.rs  module_builder.rs  vm.rs
crates/qjsruntime/qjsruntime-core/src/module_loader/: loader.rs  mod.rs  require.rs  resolver.rs
crates/qjsruntime/qjsruntime-core/src/modules/: console.rs  hex.rs  mod.rs  uuid.rs  xml.rs
crates/qjsruntime/qjsruntime-core/src/utils/: clone.rs  io.rs  mod.rs  object.rs
crates/wasmruntime-comp-sdk/: Cargo.toml
crates/wasmruntime-comp-sdk/src/: dbs.rs  key_value.rs  lib.rs  llm_infer.rs  sd_infer.rs  whisper_infer.rs
crates/wasmruntime-comp-sdk/src/http_internal/: conversions.rs  executor.rs  mod.rs  router.rs
crates/wasmruntime-comp-sdk/wasmruntime-comp-executor/: Cargo.toml
crates/wasmruntime-comp-sdk/wasmruntime-comp-executor/src/: lib.rs
crates/wasmruntime-comp-sdk/wasmruntime-comp-macro/: Cargo.toml
crates/wasmruntime-comp-sdk/wasmruntime-comp-macro/src/: lib.rs
crates/wasmruntime-comp-sdk/wasmruntime-comp-macro/wit/: README.md  world.wit
crates/wasmruntime-comp-sdk/wit/: README.md  llm-infer.wit  sd-infer.wit  world.wit
crates/wasmruntime/wasmruntime-core/: Cargo.toml
crates/wasmruntime/wasmruntime-core/src/: lib.rs  loader.rs  stdio.rs
crates/wasmruntime/wasmruntime-key-value/: Cargo.toml
crates/wasmruntime/wasmruntime-key-value/src/: initial_kv_setter.rs  lib.rs  store.rs  summary.rs
crates/wasmruntime/wasmruntime-system/: Cargo.toml
crates/wasmruntime/wasmruntime-system/src/: build.rs  lib.rs  trigger_factors.rs
crates/wasmruntime/wasmruntime-system/src/rumtime_config/: mod.rs
crates/wasmruntime/wasmruntime-system/src/rumtime_config/dbs/: mod.rs
crates/wasmruntime/wasmruntime-system/src/rumtime_config/key_value/: mod.rs
crates/wasmruntime/wasmruntime-system/src/rumtime_config/llm_infer/: mod.rs
crates/wasmruntime/wasmruntime-system/src/rumtime_config/sd_infer/: mod.rs
crates/wasmruntime/wasmruntime-system/src/rumtime_config/variables/: env.rs  mod.rs  statik.rs
crates/wasmruntime/wasmruntime-system/src/rumtime_config/whisper_infer/: mod.rs
web-dev/: .gitignore  pnpm-lock.yaml  pnpm-workspace.yaml
(+231 files in other folders)
