[package]
name = "ai-matrices-flux-handler-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "components:ai-matrices-flux-handler-component"

[package.metadata.component.dependencies]

[dependencies]
wasmruntime-comp-sdk = { path = "../../crates/wasmruntime-comp-sdk", features = ["sd-infer", "llm-infer"] }

wit-bindgen-rt = {workspace = true}

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true, features = ["v4"] }

http = { workspace = true }