[package]
name = "http-markdown-handler-component"
description = "AIMatrices markdown handler"
version = "0.2.0"
authors = ["guyoung"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/guyoung/AIMatrices"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "components:http-flux-handler-component"

[package.metadata.component.dependencies]

[dependencies]
wasmruntime-comp-sdk = { path = "../../crates/wasmruntime-comp-sdk" }

wit-bindgen-rt = {workspace = true}

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

pulldown-cmark = "0.13.0"