[package]
name = "ai-matrices-llm-handler-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "components:ai-matrices-llm-handler-component"

[package.metadata.component.dependencies]

[dependencies]
wasmruntime-comp-sdk = { path = "../../crates/wasmruntime-comp-sdk", features = ["dbs"] }

qjsruntime-core = { path = "../../crates/qjsruntime/qjsruntime-core"}

wit-bindgen-rt = {workspace = true}

anyhow = { workspace = true }
bytes = { workspace = true }

http =  { workspace = true }