[package]
name = "ai-matrices-static-file-handler-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "components:ai-matrices-static-file-handler-component"

[package.metadata.component.dependencies]

[dependencies]
wasmruntime-comp-sdk = { path = "../../crates/wasmruntime-comp-sdk" }

wit-bindgen-rt = {workspace = true}

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

futures = { workspace = true }


brotli = { workspace = true }
flate2 = { workspace = true, default-features = false, features = ["zlib-rs"] }

sha2 = { workspace = true }

hex = { workspace = true }

uuid = { workspace = true, features = ["v4"] }

http = { workspace = true }
mime_guess = { workspace = true }
