[package]
name = "ai-matrices-candle"
version = "0.1.0"
edition = "2021"



[dependencies]

candle = { workspace = true }
candle-nn = { workspace = true }

tokenizers = { workspace = true, features = ["onig"] }

rand = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }