[package]
name = "llama-infer-executor"
version = "0.1.0"
authors = ["guyoung"]
edition = "2021"

[dependencies]

llama-cpp-2-v1 = { path = "llama-cpp-2-v1", optional = true }
llama-cpp-2-v2 = { path = "llama-cpp-2-v2", optional = true }


anyhow = { workspace = true }
rand = { workspace = true }
encoding_rs = { workspace = true }

[features]

v1 = ["llama-cpp-2-v1"]
v2 = ["llama-cpp-2-v2"]