[package]
name = "llama-cpp-2-v1"
description = "llama.cpp bindings for Rust"
version = "0.1.85"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/utilityai/llama-cpp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-sys-2 = { package = "llama-cpp-sys-2-v1", path = "sys" }

enumflags2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }


[features]
default = ["vulkan"]
vulkan = ["llama-cpp-sys-2/vulkan"]



