[package]
name = "llama-cpp-2-v2"
description = "llama.cpp bindings for Rust"
version = "0.1.93"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/utilityai/llama-cpp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-sys-2 = { package = "llama-cpp-sys-2-v2", path = "sys" }

enumflags2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }


[features]
default = ["vulkan"]
vulkan = ["llama-cpp-sys-2/vulkan"]