[package]
name = "sd-infer-executor-sys"
version = "0.1.0"
edition = "2021"

links = "stable-diffusion"

include = [
    "stable-diffusion.cpp/LICENSE",
    "stable-diffusion.cpp/CMakeLists.txt",
    "stable-diffusion.cpp/gits_noise.inl",
    "stable-diffusion.cpp/*.h",
    "stable-diffusion.cpp/*.hpp",
    "stable-diffusion.cpp/*.cpp",
    "stable-diffusion.cpp/thirdparty/**",
    "stable-diffusion.cpp/ggml/cmake/**",
    "stable-diffusion.cpp/ggml/src/*",
    "!stable-diffusion.cpp/ggml/src/ggml-kompute/",
    "stable-diffusion.cpp/ggml/include/**",
    "stable-diffusion.cpp/ggml/CMakeLists.txt",
    "stable-diffusion.cpp/ggml/LICENSE",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
]

[dependencies]

[features]
default = ["vulkan"]
vulkan = []
flashattn = []

[build-dependencies]
cc = { workspace = true }
cmake = { workspace = true }
bindgen = { workspace = true }
fs_extra = { workspace = true }
