[package]
name = "whisper-rs"
version = "0.13.1"
edition = "2021"
description = "Rust bindings for whisper.cpp"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs"
repository = "https://github.com/tazz4843/whisper-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs-sys = { path = "../whisper-rs-sys"}

log = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
hound = { workspace = true }
rand = { workspace = true }

[features]
default = ["vulkan"]
raw-api = []
vulkan = ["whisper-rs-sys/vulkan", "_gpu"]
_gpu = []
test-with-tiny-model = []
whisper-cpp-log = ["dep:log"]
whisper-cpp-tracing = ["dep:tracing"]

