[package]
name = "whisper-rs"
version = "0.14.2"
edition = "2021"
description = "Rust bindings for whisper.cpp"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs"
repository = "https://github.com/tazz4843/whisper-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs-sys = { path = "../whisper-rs-sys", version = "0.12" }

log = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
hound = { workspace = true }
rand = { workspace = true }

[features]
default = ["vulkan"]
raw-api = []
vulkan = ["whisper-rs-sys/vulkan", "_gpu"]
_gpu = []
test-with-tiny-model = []

# Bring logs into Rust via the log crate. *Warning*: not mutually exclusive with tracing_backend,
# will result in duplicate logs if both are enabled and one consumes logs from the other.
log_backend = ["dep:log"]

# Bring logs into Rust via the tracing crate. *Warning*: not mutually exclusive with log_backend,
# will result in duplicate logs if both are enabled and one consumes logs from the other.
tracing_backend = ["dep:tracing"]
